done with the base setup

--- a/src/styles/transitions/index.css
+++ b/src/styles/transitions/index.css
@@ -43,19 +43,19 @@
 
 .slide-enter {
   opacity: 0;
-  transform: translateX(-50px);
+  transform: translateX(-100%);
 }
 .slide-enter-active {
   opacity: 1;
-  transform: translateX(0px);
+  transform: translateX(0%);
 }
 .slide-exit {
   opacity: 1;
-  transform: translateX(0px);
+  transform: translateX(0%);
 }
 .slide-exit-active {
   opacity: 0;
-  transform: translateX(50px);
+  transform: translateX(100%);
 }
 .slide-enter-active,
 .slide-exit-active {
